--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -36,7 +36,7 @@
 
   .headerContainer h1 {
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     font-size: 30px;
     font-weight: 50;
     color: white;
