--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -20,7 +20,6 @@
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    justify-content: center;
     background-color: whitesmoke;
     height: 60px;
     width: 140px;
@@ -28,6 +27,7 @@
     text-decoration: none;
     font-size: 18px;
     font-weight: 700;
+    text-align: center;
   }
 
   .headerContainer button:hover {
@@ -35,10 +35,9 @@
   }
 
   .headerContainer h1 {
-    justify-content: center;
-    align-items: flex-end;
+    padding-top: 8rem;
+    text-align: center;
     font-size: 30px;
-    font-weight: 50;
     color: white;
   }
 
