--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -9,14 +9,14 @@
   
   }
 
-  .headerContainer {
-    width: 100vw;
-    height: 100vh;
-    background-size: contain;
+ .headerContainer {
+  display: grid;
+  place-content: end;
+  justify-content: center;
 }
 
    
-  .headerContainer button {
+.headerContainer button {
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -28,18 +28,18 @@
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-  }
+    
+}
 
-  .headerContainer button:hover {
+.headerContainer button:hover {
     cursor: pointer;
-  }
+}
 
-  .headerContainer h1 {
-    padding-top: 8rem;
+.headerContainer h1 {
     text-align: center;
     font-size: 30px;
     color: white;
-  }
+}
 
   
 
