--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100vw;
-    height: 100vh;
+    height: 150px;
     background-color: #1a3459;
     display: grid;
     justify-content: center;
@@ -10,7 +10,7 @@
 
 .socialMedia svg {
     color: white;
-    font-size: 60px;
+    font-size: 50px;
     cursor: pointer;
 }
 
