--- a/src/styles/Modules.css
+++ b/src/styles/Modules.css
@@ -7,3 +7,45 @@
     grid-auto-rows: 200px;
 
 }
+
+.modulesTitle {
+    color: royalblue;
+    margin-left: 3rem;
+    margin-top: 1rem;
+}
+
+li {
+    list-style: none;
+}
+
+
+/* MODULES ITEM STYLING */
+
+.modulesItem {
+    border-radius: 15px;
+    margin: 20px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+.modulesItem:hover {
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+    transition: 0.3s ease-in;
+    cursor: pointer;
+}
+  
+.modulesItem div {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    /* width: 100%;
+    height: 200px; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+  
+.modulesItem h3,
+.modulesItem p {
+    margin-left: 20px;
+}
+
