--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,8 +5,7 @@
     background-color: #1a3459;
     width: 100vw;
     height: 130px;
-    padding: 1rem;
-    border-radius: 5px;
+    padding: 1rem;;
 }
 
 
