--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,24 +5,46 @@
 .contact h1 {
     text-align: center;
     color: royalblue;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
 }
   
 form {
     display: grid;
-    grid-auto-flow: row;
-    width: auto;
-    height: auto;
-    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.2rem;
+    padding: 2rem;
+
 }
+ 
   
 form input {
-    padding: 1rem;
-    border: solid 1px rgb(18, 22, 25);
-    color: black;
-    margin: 0.8rem;
-    border-radius: 8px;
+    display: block;
+    padding-left: 10px;
+    outline: none;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border-color: rgb(165, 149, 209);
+    box-shadow: 2px 3px;
 }
 
+
+.form-input::placeholder {
+    color: #595959;
+    font-size: 12px;
+}
+
+form label {
+    display: inline-block;
+    font-size: 1.2rem;
+    margin-bottom: 6px;
+    font-weight: 700;
+   color: royalblue;
+
+
+}
   
   
 form button {
