--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,6 @@
 .contact {
     display: grid;
+    grid-auto-flow: column;
   }
 
 .contact h1 {
@@ -15,6 +16,7 @@ form {
     align-items: center;
     margin-bottom: 1.2rem;
     padding: 2rem;
+    
 
 }
  
@@ -28,8 +30,14 @@ form input {
     border-radius: 5px;
     border-color: rgb(165, 149, 209);
     box-shadow: 2px 3px;
+    border: none;
+    padding: 1rem;
 }
 
+
+.form-inputs {
+    padding: 1rem;
+}
 
 .form-input::placeholder {
     color: #595959;
