--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,7 +2,19 @@
     display: grid;
     grid-auto-flow: row;
     margin: 2rem;
-    gap: 1rem;
+    gap: 2rem;
+    padding: 1rem;
 
 }
-  
+
+
+h1 {
+    color: slateblue;
+    padding-left: 2rem;
+    margin-bottom: 1rem;
+}
+
+.aboutTop {
+    display: grid;
+    gap: 1.2rem;
+}
