--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,6 +1,6 @@
 .contact {
     display: grid;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
   }
 
 .contact h1 {
@@ -66,3 +66,4 @@ form button {
     cursor: pointer;
     border-radius: 8px;
 }
+
