--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,18 +3,17 @@
     grid-auto-flow: row;
   }
 
-.contact h1 {
+/* .contact h1 {
     text-align: center;
     color: royalblue;
     font-size: 1.8rem;
     margin-bottom: 1rem;
-}
+} */
   
 form {
     display: grid;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 1.2rem;
+    margin-left: 2rem;
     padding: 2rem;
     
 
@@ -49,7 +48,8 @@ form label {
     font-size: 1.2rem;
     margin-bottom: 6px;
     font-weight: 700;
-   color: royalblue;
+    color: white;
+    padding: 0.5rem;
 
 
 }
@@ -58,13 +58,15 @@ form label {
 form button {
    
     margin-top: 40px;
-    width: 140px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     border: none;
-    background-color: #3f1a83;
-    color: whitesmoke;
-    font-size: 15px;
+    background-color: white;
+    color: blue;
+    font-size: 1rem;
+    font-weight: bold;
     cursor: pointer;
     border-radius: 8px;
+    margin-left: 2rem;
 }
 
