--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -17,10 +17,11 @@
     gap: 1.5rem;
     font-size: 1rem;
     font-weight: 700;
+    padding-right: 0.8rem;
 }
 
 header nav ul a:hover {
-    color: cornsilk;
+    color: rgb(209, 209, 33);
 }
 
 
