--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,13 +3,7 @@
     grid-auto-flow: row;
   }
 
-/* .contact h1 {
-    text-align: center;
-    color: royalblue;
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
-} */
-  
+
 form {
     display: grid;
     margin-bottom: 1.2rem;
@@ -20,7 +14,7 @@ form {
 }
  
   
-form input {
+.form-inputs {
     display: block;
     padding-left: 10px;
     outline: none;
@@ -43,7 +37,7 @@ form input {
     font-size: 12px;
 }
 
-form label {
+.form-label {
     display: inline-block;
     font-size: 1.2rem;
     margin-bottom: 6px;
@@ -55,7 +49,7 @@ form label {
 }
   
   
-form button {
+.form-input-btn {
    
     margin-top: 40px;
     width: 180px;
