--- a/src/styles/ModuleDetail.css
+++ b/src/styles/ModuleDetail.css
@@ -11,7 +11,7 @@
 
 .module-detail-main-wraper {
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;  
 }
 .module-detail-main-wraper img {
